Add Kurzweil missing program segments